--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="description" content="Vision Networks - Artificial Intelligence Data Labeling">
-      <meta name="keyword" content="robotics, AI, IOT, machine learning, Big Data, Startups">
+      <meta name="keyword" content="Vision Networks robotics, AI, IOT, machine learning, Big Data, Startups">
       <meta name="author" content="Vision Networks">
       <!-- Title -->
       <title>Vision Networks - Artificial Intelligence Data Labeling</title>
@@ -112,6 +112,7 @@
                <div class="col-lg-6 col-md-6">
                   <div class="hero-left">
                      <h2><span class="underline">Transforming</span> <span>businesses with</span> Artificial Intelligence</h2>
+                     <h1><span class="underline">with Vision Networks</span></h1><br>
                      <a href="#" class="theme-btn">Get Started <span class="fa fa-chevron-right"></span></a>
                   </div>
                </div>
@@ -148,7 +149,7 @@
                   <div class="col-lg-6">
                      <div class="about-left wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s">
                         <h3>Data Labeling <br> for Computer Vision </h3>
-                        <p>Label images and videos and take full control of your training data. Power your computer vision algorithm with datasets of any size.</p>
+                        <p>Label images and videos and take full control of your training data. Vision Networks powers your computer vision algorithm with datasets of any size.</p>
                         <a href="#" class="theme-btn mt-4">Read More <span class="fa fa-chevron-right"></span></a>
                      </div>
                   </div>
@@ -174,7 +175,7 @@
                   <div class="col-lg-6">
                      <div class="about-left wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.3s">
                         <h3>Data Labeling <br> for Natural Language Processing </h3>
-                        <p>Extract information from natural language data and take full control of your training data. Power your NLP algorithm with datasets of any size.</p>
+                        <p>Extract information from natural language data and take full control of your training data. Vision Networks powers your NLP algorithm with datasets of any size.</p>
                         <a href="#" class="theme-btn mt-4">Read More <span class="fa fa-chevron-right"></span></a>
                      </div>
                   </div>
@@ -448,4 +449,3 @@
       <script src="assets/js/main.js"></script>
    </body>
 </html>
-
